--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>象棋棋局識別助手</title>
+  <title>象棋識別助手</title>
   <script src="https://cdn.tailwindcss.com"></script>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "htm": "https://esm.sh/htm@^3.1.1"
-  }
-}
-</script>
 </head>
-<body>
+<body class="bg-gray-50">
   <div id="root"></div>
   <script type="module" src="/main.js"></script>
 </body>
