--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>象棋識別助手</title>
+  <title>象棋識別助手 v2.0</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50">
+<body>
   <div id="root"></div>
   <script type="module" src="/main.js"></script>
 </body>
